<resources>
    <string name="app_name">XYZ Screen Recorder</string>


    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files</string>
    <string name="toast_cannot_retrieve_selected_video">Cannot retrieve selected video</string>
    <string name="video_saved_at">Video saves at : $%1s</string>
    <string name="pick_a_video">Select or record a a video below to try it out:</string>

    <string name="ad_attribution">Ad</string>


    <string name="admob_appid">ca-app-pub-3940256099942544~3347511713</string>

    <string name="admob_open_id">ca-app-pub-3940256099942544/3419835294</string>
    <string name="admob_bannar_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_adNative" translatable="false">ca-app-pub-3940256099942544/2247696110</string>


    <string name="alert_dialog_internal_audio_warning_message">Internal audio recording usually records along with mic audio.\10Also, it does not work on all phones (Confirmed working on OnePlus, Xiaomi, and few Moto phones). You might try your luck</string>
    <string name="alert_dialog_internal_audio_warning_negative_btn_text">Do not show this message again</string>
    <string name="alert_dialog_internal_audio_warning_title">Warning</string>
    <string name="alert_dialog_r_submix_audio_warning_message">Recording internal audio using submix will require you to install the magisk systemizer module which is in closed beta now. Join the support group to download the module.\10Note: This will force close the app if the module is not installed.</string>
    <string name="alert_ext_dir_warning_message">Saving to external directory may not work on all phones. Proceed with caution.</string>
    <string name="alert_ext_dir_warning_title">Warning</string>
    <string name="alert_external_storage_warn_cb_text">Do not show again</string>
    <string name="alert_message_create_folder">Enter folder name</string>
    <string name="alert_permission_denied_message">The app requires storage permission to save the recorded video and change default save directory.The app is rendered useless without the permission\10\10Do you want to grant it now?</string>
    <string name="alert_permission_denied_title">Storage Permission Denied</string>
    <string name="alert_title_create_folder">Create Folder</string>

    <string name="audiorec_key">audiorecloc</string>
    <string name="bitrate_key">bitrate</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="brush">Brush</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>

    <string name="applock_permission_guide_reminder">You need to grant Usage Access permission to enable this feature</string>


    <string name="dialog_title_delete_old_file">Delete old file?</string>

    <string name="dir_exist">Directory already exists</string>


    <string name="error_permission_make_dir">No permission to write to directory</string>
    <string name="exit">Exit</string>


    <string name="external_storage_dir_not_writable">The directory is not writable</string>


    <string name="file_delete_successfuly">File deleted successfully</string>

    <string name="filename_key">filename</string>
    <string name="fileprefix_key">fileprefix</string>
    <string name="fps_key">fps</string>


    <string name="guide_activity_usage_stats_page_text2">Please permit usage access</string>


    <string name="home">Home</string>


    <string name="kilobyte">KB</string>
    <string name="language_key">language</string>


    <string name="megabyte">MB</string>
    <string name="menu_delete">delete</string>
    <string name="menu_select_all">select all</string>
    <string name="menu_share">Share</string>

    <string name="nav_gallery">Gallery</string>
    <string name="nav_more">More App</string>
    <string name="nav_policy">Policy</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_share">Share</string>
    <string name="nav_video">Videos</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="notsupport">Your device is not support</string>
    <string name="ok">OK</string>
    <string name="orientation_key">orientation</string>

    <string name="pause">Pause</string>

    <string name="permission_deny">Permission Denied</string>
    <string name="photo_list_no_photo_message">No photos available</string>
    <string name="preference_app_chooser_key">app_chosen</string>
    <string name="preference_audio_record_title">Record audio</string>
    <string name="preference_bit_title">Bit rate</string>
    <string name="preference_camera_overlay_key">camera_overlay</string>
    <string name="preference_camera_overlay_summary">Enable/Disable Camera overlay. You can switch between front and back camera</string>
    <string name="preference_camera_overlay_title">Show Camera Overlay</string>
    <string name="preference_enable_target_app_key">enable_app_target</string>
    <string name="preference_filename_format_title">File name format</string>
    <string name="preference_filename_prefix_title">File name prefix</string>
    <string name="preference_floating_control_key">floating_controls</string>
    <string name="preference_floating_control_summary">Enable/Disable floating controls which draws over every screen</string>
    <string name="preference_floating_control_title">Use Floating Controls</string>
    <string name="preference_fps_title">Frames per second</string>
    <string name="preference_language_title">Language</string>
    <string name="preference_orientation_title">Orientation</string>
    <string name="preference_resolution_title">Resolution</string>
    <string name="preference_save_gif_key">save_gif</string>
    <string name="preference_save_gif_summary">Enables saving videos as GIF animation</string>
    <string name="preference_save_gif_title">Enable saving in GIF</string>
    <string name="preference_save_location_title">Save location</string>
    <string name="preference_shake_gesture_key">shake_gesture</string>
    <string name="preference_shake_gesture_summary">Shake your device to start or stop recording</string>
    <string name="preference_shake_gesture_title">Shake to start/stop recording</string>
    <string name="preference_timer_title">Countdown Timer</string>
    <string name="preference_vibrate_key">vibrate</string>
    <string name="preference_vibrate_summary">Enable/disable vibrate when touch</string>
    <string name="preference_vibrate_title">Vibrate</string>
    <string name="prefs_category_audio_settings_title">Audio settings</string>
    <string name="prefs_category_experimental_title">Experimental</string>
    <string name="prefs_category_language_title">Language</string>
    <string name="prefs_category_recording_settings_title">Recording Settings</string>
    <string name="prefs_category_save_options_title">Save options</string>
    <string name="prefs_category_video_settings_title">Video settings</string>
    <string name="record_screen">Record</string>
    <string name="recording_failed_toast">Screen recording failed.</string>
    <string name="res_key">resolution</string>
    <string name="resume">Resume</string>


    <string name="save">Save</string>
    <string name="savelocation_key">savelocation</string>
    <string name="screen_recording_notification_action_pause">Pause</string>
    <string name="screen_recording_notification_title">Screen recording</string>
    <string name="screen_recording_paused_toast">Screen Recording paused</string>
    <string name="screen_recording_permission_denied">Screen Recording Permission Denied</string>
    <string name="screen_recording_resumed_toast">Screen Recording resumed</string>
    <string name="screen_recording_started_toast">Screen recording started</string>
    <string name="screen_recording_stopped_toast">Screen Recording stopped</string>
    <string name="screenrecording_already_active_toast">Screen recording session already active</string>
    <string name="screenrecording_waiting_for_gesture_toast">Shake your device to start recording when ready</string>
    <string name="screenshots">Screenshots</string>

    <string name="share_intent_notification_content">click to open the recorded videos</string>
    <string name="share_intent_notification_content_photo">click to open the screenshot</string>
    <string name="share_intent_notification_title">Share recorded video</string>
    <string name="share_intent_notification_title_photo">Share screenshot</string>
    <string name="short_seconds">sec</string>

    <string name="stop">Stop</string>
    <string name="storage_permission_request_summary">Write permission to storage is required to save the recorded video.</string>
    <string name="storage_permission_request_title">Allow Storage Permission</string>
    <string name="storage_selection_spinner_title">Select storage</string>
    <string name="str_permission_remind">You need turn on permission to use app</string>
    <string name="timer_key">timer</string>
    <string name="tools">Tools</string>
    <string name="video_list_no_video_message">No videos available</string>
    <string name="video_list_permission_denied_message">Storage permission denied</string>
    <string name="video_not_found">Video not found!</string>

    <!--  Facebook Ads-->
    <string name="fb_nativelist">287668318987393_288158642271</string>
    <string name="fb_inter_splash">287668318987393_28815782227</string>

    <string name="fb_inters_dlt" translatable="false">287668318987393_2881612422</string>

</resources>
