<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="64dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#fafafa"
        android:orientation="horizontal"
        android:padding="4dp">

        <RelativeLayout
            android:id="@+id/record"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/imv_record"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_record_noti" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imv_record"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:ellipsize="middle"
                android:singleLine="true"
                android:text="@string/record_screen"
                android:textColor="@color/text_color"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/capture"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:visibility="gone">

            <ImageView
                android:id="@+id/imv_capture"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_camera"
                android:tint="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imv_capture"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:ellipsize="middle"
                android:singleLine="true"
                android:text="@string/screenshots"
                android:textColor="@color/text_color"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tools"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/imv_cc"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_tools_app"
                android:tint="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imv_cc"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:ellipsize="middle"
                android:singleLine="true"
                android:text="@string/tools"
                android:textColor="@color/text_color"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/notification_layout_main_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/imv_home"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_home"
                android:tint="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imv_home"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:ellipsize="middle"
                android:singleLine="true"
                android:text="@string/home"
                android:textColor="@color/text_color"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/close"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/imv_exit"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/ic_record_noti"
                android:padding="2dp"
                android:src="@drawable/ic_close_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imv_exit"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:ellipsize="middle"
                android:singleLine="true"
                android:text="@string/exit"
                android:textColor="@color/text_color"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>
